# ray-tracer-challenge

./: CMakeLists.txt
core/: CMakeLists.txt  canvas.cpp  canvas.h  common.cpp  common.h  mat.h  ray.h  tuple.cpp  tuple.h
src/: canvas.cpp  common.cpp  common.h  figures.h  main.cpp  mat.h  ray.cpp  ray.h  tuple.cpp  tuple.h
tests/: canvas_test.cpp  color_test.cpp  mat_test.cpp  ray_test.cpp  tuple_test.cpp
